# chess-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  fix_unused_san.patch  roadmap.txt
src/: attacks.cpp  attacks.hpp  chess_types.hpp  eval.cpp  eval.hpp  fen.cpp  fen.hpp  main.cpp  position.cpp  position.hpp  san.cpp  san.hpp  search.cpp  search.hpp  tt.hpp  uci.cpp  zobrist.cpp  zobrist.hpp
